# CMake_CXX_Template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build-debug.sh  build-release.sh  configure-debug.sh  configure-release.sh  run-debug.sh  run-release.sh
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
